# xdong1

./: .gitignore  Dockerfile  Dockerfile.nginx  Dockerfile.xray  Makefile  app.json  docker-compose.yml  entrypoint.sh  entrypoint_xray.sh  okteto-pipeline.yml  pyproject.toml
.github/workflows/: main_okteto.yml  split_deploy.yml  split_okteto.yml  split_update.yml  update.yml
conf/: Xray.template.json  nginx.template.conf  supervisord.conf
conf/supervisor/: nginx.conf  nginx.ini  xray.conf  xray.ini  xsrc.conf  xsrc.ini
k8s/: deployment.yaml  service.yml
resources/: gunicorn_conf.py
scripts/: start
src/: __init__.py  entry.py  main.py  version.py
src/api/v1/: __init__.py  views.py
src/commands/: webserver_command.py
src/config/: __init__.py  config_parser.py
src/core/: events.py  logging.py  routes.py
