[tool.poetry]
name = "xdong"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
    { include = "resources" }
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
loguru = "^0.6.0"
typer = "^0.4.1"
requests = "^2.27.1"
gunicorn = "^20.1.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.17.6"
aiofiles = "^0.8.0"
psutil = "^5.9.0"
lockfile = "^0.12.2"
websockets = "^10.3"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
xsrc = 'src.entry:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
